testsuite/tests/typecheck/should_fail/ExplicitSpecificity2.stderr

ExplicitSpecificity2.hs:11:15: error:
    • Cannot apply expression of type ‘Proxy (*) -> T (*)’
      to a visible type argument ‘Int’
    • In the expression: C @Type @Int Proxy
      In an equation for ‘x’: x = C @Type @Int Proxy
      In the expression: let x = C @Type @Int Proxy in ()
